modify submitVote method. modify ProfileBacking

--- a/src/main/webapp/views/authenticated/profile.xhtml
+++ b/src/main/webapp/views/authenticated/profile.xhtml
@@ -38,7 +38,7 @@
 
             <div class="form-field">
                 <label for="password">Password:</label>
-                <h:inputSecret id="password" value="#{profileBacking.user.password}"/>
+                <h:inputSecret id="password" value="#{profileBacking.user.password}" validator="PasswordValidator"/>
             </div>
 
             <div class="form-field">
