rename values,messages to german. remove immediate from login.xhtml add errorPage.xhtml add message after voting in ciculationDetails

--- a/src/main/webapp/views/anonymous/errorPage.xhtml
+++ b/src/main/webapp/views/anonymous/errorPage.xhtml
@@ -5,11 +5,11 @@
       xmlns:h="jakarta.faces.html"
       xmlns:f="jakarta.faces.core">
 <h:head>
-    <title>Title</title>
+    <title>Error Page</title>
 </h:head>
-
 <h:body>
-
+    <h1>Error Page</h1>
+    <h:outputText value="#{errorPageBacking.errorMessage}" />
 </h:body>
 
 </html>
