add id's to JF-components

--- a/src/main/webapp/views/anonymous/Impressum.xhtml
+++ b/src/main/webapp/views/anonymous/Impressum.xhtml
@@ -12,7 +12,7 @@
 </h:head>
 
 <h:body>
-    <h:outputText value="#{impressumBacking.impressumContent}"/>
+    <h:outputText id="imprint-link" value="#{impressumBacking.impressumContent}"/>
 
 
 </h:body>
