fixing the pagination

--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -111,45 +111,46 @@
                 <div class="d-flex justify-content-center">
 
 
-                    <h:panelGroup rendered="#{circulationListBacking.circPagination.isFirstPage()}">
-                        <h:outputText styleClass="page-item"
-                                      value="Page : #{circulationListBacking.circPagination.currentPage} of #{circulationListBacking.circPagination.getTotalNumOfPages() }"/>
-                    </h:panelGroup>
-
-
                     <ul class="pagination">
-                        <h:panelGroup rendered="#{circulationListBacking.circPagination.totalNumOfPages>1}">
-                            <h:panelGroup layout="block" styleClass="page-item">
-                                <h:commandLink id="firstpage-link" value="First" action="#{circulationListBacking.circPagination.firstPage}"
-                                               styleClass="page-link"/>
+                        <h:panelGroup >
+                            <h:panelGroup layout="block" styleClass="page-item" rendered="#{!circulationListBacking.circPagination.isFirstPage()}">
+                                <h:commandLink id="firstpage-link" value="First" action="#{circulationListBacking.circPagination.firstPage()}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
 
                             <h:panelGroup layout="block" styleClass="page-item"
                                           rendered="#{!circulationListBacking.circPagination.isFirstPage()}">
-                                <h:commandLink  id="Previouspage-link" value="Previous"
-                                               action="#{circulationListBacking.circPagination.previousPage}"
-                                               styleClass="page-link"/>
+                                <h:commandLink id="previouspage-link" value="Previous"
+                                               action="#{circulationListBacking.circPagination.previousPage()}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
-
 
                             <h:outputText styleClass="page-item"
-                                          value="Page : #{circulationListBacking.circPagination.currentPage} of #{circulationListBacking.circPagination.getTotalNumOfPages() }"/>
-
+                                          value="Page : #{circulationListBacking.circPagination.currentPage} of #{circulationListBacking.circPagination.totalNumOfPages}"/>
 
                             <h:panelGroup layout="block" styleClass="page-item"
                                           rendered="#{!circulationListBacking.circPagination.isLastPage()}">
-                                <h:commandLink id="nextpage-link"  value="Next" action="#{circulationListBacking.circPagination.nextPage()}"
-                                               styleClass="page-link"/>
+                                <h:commandLink id="nextpage-link" value="Next" action="#{circulationListBacking.circPagination.nextPage()}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
 
                             <h:panelGroup layout="block" styleClass="page-item"
                                           rendered="#{!circulationListBacking.circPagination.isLastPage()}">
-                                <h:commandLink id="lastpage-link"  value="Last" action="#{circulationListBacking.circPagination.lastPage()}"
-                                               styleClass="page-link"/>
+                                <h:commandLink id="lastpage-link" value="Last" action="#{circulationListBacking.circPagination.lastPage()}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
-
                         </h:panelGroup>
                     </ul>
+
+
                 </div>
             </h:form>
         </div>
