--- a/src/main/webapp/views/deanery/userList.xhtml
+++ b/src/main/webapp/views/deanery/userList.xhtml
@@ -73,7 +73,7 @@
                     </h:column>
 
                     <!-- Faculty -->
-                    <h:column rendered="#{circulationListBacking.sessionInfo.admin}">
+                    <h:column rendered="#{user.sessionInfo.admin}">
                         <f:facet name="header">
                             <h:outputText value="Faculty"/>
 
@@ -90,42 +90,47 @@
 
                 <div class="d-flex justify-content-center">
 
-                    <h:panelGroup layout="block" styleClass="page-item"
-                                  rendered="#{userListBacking.userPagination.isFirstPage()}">
-                        <h:outputText styleClass="page-item" value="Page : #{userListBacking.userPagination.currentPage}
-                        of #{userListBacking.userPagination.getTotalNumOfPages() }"/>
-                    </h:panelGroup>
-
-
                     <ul class="pagination">
-                        <h:panelGroup rendered="#{userListBacking.userPagination.totalNumOfPages>1}">
-                            <h:panelGroup layout="block" styleClass="page-item">
+                        <h:panelGroup rendered="#{userListBacking.userPagination.totalNumOfPages > 1}">
+
+                            <h:panelGroup layout="block" styleClass="page-item" rendered="#{!userListBacking.userPagination.isFirstPage()}">
                                 <h:commandLink id="firstpage-link" value="First" action="#{userListBacking.userPagination.firstPage}"
-                                               styleClass="page-link"/>
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
 
-                            <h:panelGroup layout="block" styleClass="page-item"
-                                          rendered="#{!userListBacking.userPagination.isFirstPage()}">
-                                <h:commandLink  id="previouspage-link" value="Previous"
-                                               action="#{userListBacking.userPagination.previousPage()}"
-                                               styleClass="page-link"/>
+                            <h:panelGroup layout="block" styleClass="page-item" rendered="#{!userListBacking.userPagination.isFirstPage()}">
+                                <h:commandLink id="previouspage-link" value="Previous"
+                                               action="#{userListBacking.userPagination.previousPage}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
 
-                            <h:outputText styleClass="page-item"
-                                          value="Page : #{userListBacking.userPagination.currentPage} of #{userListBacking.userPagination.getTotalNumOfPages() }"/>
+                            <h:panelGroup layout="block" styleClass="page-item disabled">
+                                <h:outputText value="Page : #{userListBacking.userPagination.currentPage} of #{userListBacking.userPagination.totalNumOfPages }"
+                                              />
+                            </h:panelGroup>
 
-                            <h:panelGroup layout="block" styleClass="page-item"
-                                          rendered="#{!userListBacking.userPagination.isLastPage()}">
-                                <h:commandLink id="nextpage-link" value="Next" action="#{userListBacking.userPagination.nextPage()}"
-                                               rendered="#{!userListBacking.userPagination.lastPage()}"
-                                               styleClass="page-link"/>
+                            <h:panelGroup layout="block" styleClass="page-item" rendered="#{!userListBacking.userPagination.isLastPage()}">
+                                <h:commandLink id="nextpage-link" value="Next" action="#{userListBacking.userPagination.nextPage}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
-                            <h:panelGroup layout="block" styleClass="page-item">
-                                <h:commandLink id="lastpage-link" value="Last" action="#{userListBacking.userPagination.lastPage()}"
-                                               styleClass="page-link"/>
+
+                            <h:panelGroup layout="block" styleClass="page-item" rendered="#{!userListBacking.userPagination.isLastPage()}">
+                                <h:commandLink id="lastpage-link" value="Last" action="#{userListBacking.userPagination.lastPage}"
+                                               styleClass="page-link">
+                                    <f:ajax execute="@this" render="@form" />
+                                </h:commandLink>
                             </h:panelGroup>
+
                         </h:panelGroup>
                     </ul>
+
+
                 </div>
             </h:form>
         </div>
