--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -38,7 +38,7 @@
                             <h:outputText value="Fakultät"/>
                             <h:inputText value="#{circulationListBacking.filter.facultyId}">
                                 <f:ajax event="keyup" listener="#{circulationListBacking.loadCirculations}"
-                                        render="cir-dt"/>
+                                        render="@form"/>
                             </h:inputText>
                         </f:facet>
                         <h:outputText value="#{circulation.facultyId}"/>
@@ -50,7 +50,7 @@
                         <f:facet name="header">
                             <h:outputText value="Titel"/>
                             <h:inputText value="#{circulationListBacking.filter.title}">
-                                <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="cir-dt"/>
+                                <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
 
                             </h:inputText>
                         </f:facet>
@@ -67,7 +67,7 @@
                         <f:facet name="header">
                             <h:outputText value="Doktoranden"/>
                             <h:inputText value="#{circulationListBacking.filter.doctoralCandidateName}">
-                                <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="cir-dt"/>
+                                <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
                             </h:inputText>
                         </f:facet>
                         <h:outputText value="#{circulation.doctoralCandidateName}"/>
@@ -79,7 +79,7 @@
                         <f:facet name="header">
                             <h:outputText value="Doktorvater"/>
                             <h:inputText value="#{circulationListBacking.filter.doctoralSupervisor}">
-                                <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="cir-dt"/>
+                                <f:ajax event="change" listener="#{circulationListBacking.loadCirculations}" render="@form"/>
                             </h:inputText>
                         </f:facet>
                         <h:outputText value="#{circulation.doctoralSupervisor}"/>
@@ -107,12 +107,21 @@
 
                 </h:dataTable>
 
+                <ui:fragment rendered="#{empty circulationListBacking.circulations}">
+                    <div class="alert alert-warning alert-dismissible fade show" style="max-width: 980px;">
+                        <h4 class="alert-heading">Keine Ergebnisse gefunden.</h4>
+                        <p>Bitte ändern Sie Ihre Filtereinstellungen und versuchen Sie es erneut.</p>
+                    </div>
+                </ui:fragment>
+
+
+
                 <!-- Pagination Controls -->
                 <div class="d-flex justify-content-center">
 
 
                     <ul class="pagination">
-                        <h:panelGroup >
+                        <h:panelGroup rendered="#{!empty circulationListBacking.circulations}">
                             <h:panelGroup layout="block" styleClass="page-item" rendered="#{!circulationListBacking.circPagination.isFirstPage()}">
                                 <h:commandLink id="firstpage-link" value="First" action="#{circulationListBacking.circPagination.firstPage()}"
                                                styleClass="page-link">
