improving the pagination

--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -93,7 +93,7 @@
 
                             <li class="nav-item">
                                 <h:commandButton id="logout-cbtn" action="#{navigationBacking.logout}" value="Abmelden"
-                                                 styleClass="nav-link btn btn-primary"/>
+                                                 styleClass="nav-link btn btn-secondary"/>
                             </li>
 
                         </h:panelGroup>
